--- a/src/X-Monitor/View/Base.lproj/Main.storyboard
+++ b/src/X-Monitor/View/Base.lproj/Main.storyboard
@@ -1470,10 +1470,10 @@
                 <splitViewController id="GAR-3n-OIx" userLabel="Main View" customClass="MainViewController" sceneMemberID="viewController">
                     <splitViewItems>
                         <splitViewItem id="qmc-vq-iNQ"/>
-                        <splitViewItem canCollapse="YES" id="zFp-wk-OnQ"/>
+                        <splitViewItem id="zFp-wk-OnQ"/>
                     </splitViewItems>
                     <splitView key="splitView" dividerStyle="thin" id="SX8-wc-aI3">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="650" height="400"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <outlet property="delegate" destination="GAR-3n-OIx" id="hFW-3l-gHF"/>
@@ -1487,24 +1487,24 @@
                 </splitViewController>
                 <customObject id="WFD-9b-Die" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1643" y="67"/>
+            <point key="canvasLocation" x="1644" y="176"/>
         </scene>
         <!--Event Table-->
         <scene sceneID="mmX-6z-11R">
             <objects>
                 <viewController id="0tk-qp-Ji3" userLabel="Event Table" customClass="EventTableViewController" sceneMemberID="viewController">
                     <view key="view" misplaced="YES" id="q4z-a5-yW0">
-                        <rect key="frame" x="0.0" y="0.0" width="756" height="32"/>
+                        <rect key="frame" x="0.0" y="0.0" width="750" height="94"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qky-ce-gcE">
-                                <rect key="frame" x="0.0" y="0.0" width="736" height="32"/>
+                                <rect key="frame" x="0.0" y="0.0" width="750" height="66"/>
                                 <clipView key="contentView" id="B1U-Vm-6ni">
-                                    <rect key="frame" x="1" y="1" width="734" height="30"/>
+                                    <rect key="frame" x="1" y="1" width="748" height="64"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" headerView="6KV-jV-ld0" viewBased="YES" id="TrI-RG-osL">
-                                            <rect key="frame" x="0.0" y="0.0" width="794" height="16"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="748" height="36"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="17" height="0.0"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1583,7 +1583,7 @@
                                                         </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn editable="NO" width="45" minWidth="45" maxWidth="1000" id="c5h-fd-bkh" userLabel="Pid">
+                                                <tableColumn editable="NO" width="50" minWidth="50" maxWidth="50" id="c5h-fd-bkh" userLabel="Pid">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="PID">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -1595,11 +1595,11 @@
                                                     </textFieldCell>
                                                     <prototypeCellViews>
                                                         <tableCellView id="8VG-tu-2kz">
-                                                            <rect key="frame" x="290" y="0.0" width="45" height="16"/>
+                                                            <rect key="frame" x="290" y="0.0" width="50" height="16"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xSC-Jd-CX2">
-                                                                    <rect key="frame" x="-2" y="0.0" width="49" height="16"/>
+                                                                    <rect key="frame" x="-2" y="0.0" width="54" height="16"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" id="20s-tT-ZfI">
                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1619,7 +1619,7 @@
                                                         </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn editable="NO" width="128" minWidth="100" maxWidth="9.2233720368547758e+18" id="J5e-eB-nFC" userLabel="Process">
+                                                <tableColumn editable="NO" width="150" minWidth="150" maxWidth="9.2233720368547758e+18" id="J5e-eB-nFC" userLabel="Process">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Process">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -1632,11 +1632,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="SWU-wI-TII">
-                                                            <rect key="frame" x="352" y="0.0" width="128" height="16"/>
+                                                            <rect key="frame" x="357" y="0.0" width="150" height="16"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="kT4-Ef-dfT">
-                                                                    <rect key="frame" x="-2" y="0.0" width="132" height="16"/>
+                                                                    <rect key="frame" x="-2" y="0.0" width="154" height="16"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" id="OdN-NJ-RzG">
                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1656,7 +1656,7 @@
                                                         </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn editable="NO" width="291" minWidth="100" maxWidth="9.2233720368547758e+18" id="tCT-1u-6t0" userLabel="Short Info">
+                                                <tableColumn editable="NO" width="218" minWidth="150" maxWidth="9.2233720368547758e+18" id="tCT-1u-6t0" userLabel="Short Info">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Short Info">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -1669,11 +1669,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="wSf-ve-CMQ">
-                                                            <rect key="frame" x="497" y="0.0" width="288" height="16"/>
+                                                            <rect key="frame" x="524" y="0.0" width="215" height="16"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="804-YX-0EF">
-                                                                    <rect key="frame" x="-2" y="0.0" width="292" height="16"/>
+                                                                    <rect key="frame" x="-2" y="0.0" width="219" height="16"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" id="NEv-H6-1Sp">
                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1697,25 +1697,25 @@
                                         </tableView>
                                     </subviews>
                                 </clipView>
-                                <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="AqH-Q6-JUl">
-                                    <rect key="frame" x="1" y="15" width="734" height="16"/>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="AqH-Q6-JUl">
+                                    <rect key="frame" x="1" y="106" width="748" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="32F-6j-9g8">
-                                    <rect key="frame" x="779" y="29" width="16" height="2"/>
+                                    <rect key="frame" x="720" y="16" width="15" height="13"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" wantsLayer="YES" id="6KV-jV-ld0">
-                                    <rect key="frame" x="0.0" y="0.0" width="794" height="28"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="748" height="28"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Qky-ce-gcE" firstAttribute="top" secondItem="q4z-a5-yW0" secondAttribute="top" id="5C5-sT-tBI"/>
-                            <constraint firstItem="Qky-ce-gcE" firstAttribute="leading" secondItem="q4z-a5-yW0" secondAttribute="leading" id="Rdp-c7-PFn"/>
-                            <constraint firstAttribute="trailing" secondItem="Qky-ce-gcE" secondAttribute="trailing" id="taN-Jb-yfx"/>
-                            <constraint firstAttribute="bottom" secondItem="Qky-ce-gcE" secondAttribute="bottom" id="xCX-zh-BOH"/>
+                            <constraint firstAttribute="bottom" secondItem="Qky-ce-gcE" secondAttribute="bottom" id="9X5-Or-fsB"/>
+                            <constraint firstItem="Qky-ce-gcE" firstAttribute="top" secondItem="q4z-a5-yW0" secondAttribute="top" id="IP4-M4-NMp"/>
+                            <constraint firstItem="Qky-ce-gcE" firstAttribute="leading" secondItem="q4z-a5-yW0" secondAttribute="leading" id="Yx0-Yc-KGv"/>
+                            <constraint firstAttribute="trailing" secondItem="Qky-ce-gcE" secondAttribute="trailing" id="pzj-ts-mQd"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1724,29 +1724,29 @@
                 </viewController>
                 <customObject id="D7x-tq-LPx" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2382" y="82.5"/>
+            <point key="canvasLocation" x="2091" y="597"/>
         </scene>
         <!--Event Info-->
         <scene sceneID="ESE-dq-oYl">
             <objects>
                 <viewController id="DON-Tm-Tm1" userLabel="Event Info" customClass="EventInfoViewController" sceneMemberID="viewController">
                     <view key="view" id="6nl-3c-lRY">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="650" height="60"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIi-u1-5Io">
-                                <rect key="frame" x="20" y="20" width="410" height="0.0"/>
+                                <rect key="frame" x="20" y="20" width="610" height="20"/>
                                 <clipView key="contentView" drawsBackground="NO" id="FR3-fk-qLE">
-                                    <rect key="frame" x="0.0" y="0.0" width="410" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="610" height="20"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView wantsLayer="YES" editable="NO" importsGraphics="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="2Z4-b8-2Ki">
-                                            <rect key="frame" x="0.0" y="0.0" width="410" height="14"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="610" height="20"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="410" height="0.0"/>
-                                            <size key="maxSize" width="468" height="10000000"/>
+                                            <size key="minSize" width="610" height="20"/>
+                                            <size key="maxSize" width="650" height="10000000"/>
                                             <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                         </textView>
                                     </subviews>
@@ -1774,7 +1774,7 @@
                 </viewController>
                 <customObject id="Emb-IB-Xgg" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1643" y="343"/>
+            <point key="canvasLocation" x="1331" y="597"/>
         </scene>
         <!--Edit Category-->
         <scene sceneID="I07-2B-Da4">
@@ -2001,7 +2001,7 @@ Gw
                 </viewController>
                 <customObject id="mvN-pw-rzH" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1304" y="730"/>
+            <point key="canvasLocation" x="1301" y="1020"/>
         </scene>
     </scenes>
     <resources>
